Fixing layout problem with headers

--- a/static/style.css
+++ b/static/style.css
@@ -383,7 +383,7 @@ body {
   text-decoration: none;
   text-align: left;
   margin: 15px;
-  margin-left: 35px;
+  margin-left: 15px;
 }
 
 .text_about_page{
